--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -26,6 +27,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
         pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
+
     - name: Lint with flake8
       run: |
         echo skip
@@ -33,7 +35,18 @@ jobs:
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#
+    - name: Download models
+      run: |
+        mkdir G2PWModel
+        cd G2PWModel
+        wget https://storage.googleapis.com/esun-ai/g2pW/G2PWModel-v2.zip
+        unzip G2PWModel-v2.zip
+        cd ../
+
+        git lfs install
+        git clone https://huggingface.co/bert-base-chinese
+
     - name: Test with pytest
       run: |
         make test
-#        make test-with-cov
