--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -50,3 +50,8 @@ jobs:
     - name: Test with pytest
       run: |
         make test
+
+    - name: run demo file
+      run: |
+        pip install -e .
+        python tests/test_pinyin.py
