--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
         pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
+        pip3 install .
 
     - name: Lint with flake8
       run: |
@@ -50,5 +51,4 @@ jobs:
 
     - name: run demo file
       run: |
-        pip install -e .
         python tests/test_pinyin.py
