--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -23,20 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
         pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
-        pip3 install .
 
-    - name: Lint with flake8
-      run: |
-        echo skip
-        # stop the build if there are Python syntax errors or undefined names
-#        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-#        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-#
     - name: Download models
       run: |
         wget https://storage.googleapis.com/esun-ai/g2pW/G2PWModel-v2-onnx.zip
@@ -45,10 +33,19 @@ jobs:
         git lfs install
         git clone https://huggingface.co/bert-base-chinese
 
+    - name: run demo file with stable
+      run: |
+        pip install pypinyin-g2pw
+        python tests/test_pinyin.py
+
+    - name: run demo file with master code
+      run: |
+        pip3 install .
+        python tests/test_pinyin.py
+
     - name: Test with pytest
       run: |
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
         make test
-
-    - name: run demo file
-      run: |
-        python tests/test_pinyin.py
